--- a/css/landscape.css
+++ b/css/landscape.css
@@ -1,6 +1,6 @@
 @media all and (orientation:landscape) {
     
-    table[type=board]{
+    table[id=vboard]{
     	height: 80vh;
     	width: 85vh;
     	margin-top: 5%;
@@ -13,6 +13,74 @@
     img[id=logo]{
     	max-width: 40%;
     	margin-top: -3%;
+    }
+    @media (min-width: 1000px) and (min-height: 1000px){
+    	td,tr{
+    		border: 4px solid black;
+    	}
+    	img[id=logo]{
+    		display: none;
+    	}
+    	img[id=logohd]{
+    		display: initial;
+    		width: 80%;
+    	}
+    	button[id=player],[id=host]{
+    		width: 70%;
+    		padding: 3%;
+    		font-size: 55px;
+    	}
+    	table[id=board1]{
+    		width: 50vw;
+    		height: 80vh;
+    	}
+    	.hmode{
+    		padding: 3%;
+    		font-size: 300%;
+    		width: 30%;
+    	}
+    	.boxed{
+		    width: 20%;
+		    line-height: 30%;
+		    height: 3%;
+		    margin-top: 3%;
+    	}
+    	p[id=numdisp]{
+    		font-size: 400%;
+   			line-height: 70%;
+    	}
+    }
+/*    ipad mini: 1024w x 768h*/
+    @media (min-height: 650px) and (max-height: 900px){
+    	table[id=board1]{
+    		width: 50vw;
+    		height: 80vh;
+    	}
+    	.boxed{
+    		margin-top: 3%;
+    	}
+    }
+
+    /*iphone 5 to iPhone 6 Plus*/
+    @media (min-height: 315px) and (max-height: 430px){
+    	.hmode{
+    		padding: 1%;
+    		font-size: 80%;
+    	}
+    	.boxed{
+			width: 15%;
+		    border: 2px solid black;
+		    margin-top: 1%;
+		    height: 1%;
+    	}
+    	p[id=numdisp]{
+    		font-size: 120%;
+    	}
+    	table[id=board1]{
+    		width: 50vw;
+    		height: 70vh;
+    	}
+
     }
 
 }
