--- a/css/portrait.css
+++ b/css/portrait.css
@@ -1,5 +1,5 @@
 @media all and (orientation:portrait) {
-    table[type="board"]{
+    table[id="vboard"]{
     	height: 53vh;
     	margin-top: 20%;
     }
@@ -10,6 +10,56 @@
     }
     .page{
     	max-zoom: 125%;
+    }
+
+    .boxed{
+    	margin-top: 5%;
+    }
+
+    @media (min-height: 1000px){
+    	table[id="vboard"]{
+    	height: 60vh;
+    	width: 80vw;
+    	margin-top: 20%;
+    	}
+    }
+
+/*    for large tablets like iPad Air*/
+    @media (min-width: 1000px) and (min-height: 1200px){ 
+    	table[id="board1"]{
+    		height: 78vh;
+    		width: 80vw;
+    		margin-top: 2%;
+    	}
+    	.boxed{
+		    height: 6vh;
+		    width: 20vw;
+		    margin-bottom: 1%;
+		    border-radius: 8px;
+    	}
+    	p[id="numdisp"]{
+		    line-height: 130px;
+		    font-size: 600%;
+    	}
+    	.hmode{
+    		font-size: 450%;
+    	}
+    	tr,td{
+    		border: 4px solid black;
+    	}
+    	img[id="logo"]{
+    		display: none;
+    	}
+    	img[id="logohd"]{
+    		margin-top: 10%;
+    		margin-bottom: 10%;
+    		display: initial;
+    	}
+    	button[id=player],[id=host]{
+    		width: 40%;
+    		padding: 3%;
+    		font-size: 400%;
+    	}
     }
 
 }
