--- a/css/landscape.css
+++ b/css/landscape.css
@@ -1,20 +1,33 @@
 @media all and (orientation:landscape) {
-    
+/*
+  .jumbotron{
+    height: 100vh;
+  }*/
+
     table[id=vboard]{
     	height: 80vh;
     	width: 85vh;
-    	margin-top: 5%;
+    	margin-top: 3%;
     }
     div[id="btnset"]{
-    	width: 80%;
+    	width: 65%;
     	margin: auto;
     }
 
     img[id=logo]{
     	max-width: 40%;
-    	margin-top: -3%;
+    	margin-top: 0%;
     }
+
+    /*big tablets like iPad Air*/
     @media (min-width: 1000px) and (min-height: 1000px){
+      .menubtn{
+        padding: 3%;
+        font-size: 400%;
+      }
+      #numgen{
+        height: 105vh;
+      }
     	td,tr{
     		border: 4px solid black;
     	}
@@ -23,7 +36,7 @@
     	}
     	img[id=logohd]{
     		display: initial;
-    		width: 80%;
+    		width: 70%;
     	}
     	button[id=player],[id=host]{
     		width: 70%;
@@ -57,12 +70,15 @@
     		height: 80vh;
     	}
     	.boxed{
-    		margin-top: 3%;
+    		margin-top: 1%;
     	}
     }
 
     /*iphone 5 to iPhone 6 Plus*/
     @media (min-height: 315px) and (max-height: 430px){
+      .menubtn{
+        padding: 1%;
+      }
     	.hmode{
     		padding: 1%;
     		font-size: 80%;
@@ -80,6 +96,10 @@
     		width: 50vw;
     		height: 70vh;
     	}
+      img[id=logo]{
+        max-width: 40%;
+        margin-top: -3%;
+      }
 
     }
 
