--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,36 @@
 /* entire HTML page */
-.page{ 
-	background-color: #e6e6e6;
+.page{
+background: linear-gradient(to right, #fbc0c0, #ace7f9);
 }
 
+/* green frames containing the board and selector */
+.jumbotron{
+	background: linear-gradient(to left, #2da377, #65cca3);
+	/*padding: 0px;*/
+	margin: 0px auto;
+	height: 100vh;
+	border-radius: 4px;
+	text-align: center;
+}
+#numgen{
+	height:105vh;
+}
+
+.menubtn{
+	display: none;
+	min-width: 100%;
+	padding: 2%;
+	border: none;
+  background: #a24e4e;
+	color: white;
+	font-size: 130%
+}
 img[id=logo]{
 	height: auto;
 	width: auto;
 	max-width: 100%;
 	max-height: 100%;
+	margin-top: 20%;
 }
 
 img[id=logohd]{
@@ -47,9 +70,10 @@ button[id=host]{
     width: 90px;
     height: 10px;
     margin: auto auto 0 auto;
-	text-align:top;
-	border:5px solid black;
-	padding-bottom: 15px;
+		margin-top: 2%;
+		text-align:top;
+		border: 3px solid black;
+		padding-bottom: 15px;
     padding-top: 15px;
     border-radius: 10px;
 }
@@ -88,20 +112,9 @@ button[id=submit],[id=submit1],[id=reset]{
 	border-radius: 15px;
 }
 
-/* green frames containing the board and selector */
-.jumbotron{
-	background-color: #71ab80;
-	padding: 5px;
-	margin: 0px auto;
-/*	max-width: 666px;*/
-	height: 98vh;
-	border-radius: 4px;
-	text-align: center;
-}
-
 #numgen{
-    min-width: 350px;
-    width: 90%;
+  min-width: 350px;
+  width: 100%;
 	line-height: 8px;
 	display: none;
 	max-width: 1700px;
@@ -131,7 +144,7 @@ tr.heading{
 }
 
 tr,td{
-	border: 2px solid black;
+	border: 1px solid black;
 	font-size: 115%;
 	text-decoration: white;
 }
