--- a/css/portrait.css
+++ b/css/portrait.css
@@ -1,7 +1,7 @@
 @media all and (orientation:portrait) {
     table[id="vboard"]{
-    	margin-top: 30%;
-      height: auto;
+    	margin-top: 16%;
+      height: 53vh;
     }
 
     .hmode{
